# flask_example

./: .gitignore  pyproject.toml  pytest.ini
.github/workflows/: main.yaml
flask_example/: app.py
